--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   text-align: center;
   /* align-items: center; */
+  height: 100vh;
 }
 div {
   display: block;
